name:          array-repa
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple


executable              repa-perlin
    hs-source-dirs:     .
    main-is:            Perlin.hs
    ghc-options:        -main-is Repa.Perlin -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
    build-depends:      base
                      , hsnoise
                      , repa
                      , JuicyPixels


executable              repa-stacking
    hs-source-dirs:     .
    main-is:            Stacking.hs
    ghc-options:        -main-is Repa.Stacking -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
    build-depends:      base
                      , hsnoise
                      , repa
                      , JuicyPixels
