name:                snap-demo
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable snap-demo
  main-is:             Main.hs
  build-depends:       base
                     , snap-core
                     , snap-server
                     , bytestring
  default-extensions:  OverloadedStrings
