name:                wai-demo
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wai-exe
  main-is:             Main.hs
  build-depends:       base
                     , http-types
                     , wai
                     , warp
                     , wai-predicates
                     , wai-routing
                     , bytestring
  default-extensions:  OverloadedStrings
