name:                yesod-demo
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable yesod-demo
  main-is:             Main.hs
  build-depends:       base
                     , yesod
  default-extensions:  QuasiQuotes, TemplateHaskell, TypeFamilies, ViewPatterns, OverloadedStrings
