name:          fps-meter
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          fps-meter
    main-is:        Main.hs
    build-depends:  base
                  , reactive-banana
                  , reactive-banana-sdl2
                  , sdl2
                  , text
                  , linear
                  , sdl2-ttf
